--- a/index.html
+++ b/index.html
@@ -1,18 +1,217 @@
 <!DOCTYPE html>
 <html lang="en">
+<div class="menu__inner col-sm-12 col-md-6 col-xxl-4 gx-xxl-4">
+  <div class="menu__message mb-4">
+    <div class="menu__message-title mb-2">Быстрое сообщение</div>
+    <div class="menu__message-icons">
+      <div class="menu__message-icon">1</div>
+      <div class="menu__message-icon">2</div>
+      <div class="menu__message-icon">3</div>
+      <div class="menu__message-icon">4</div>
+    </div>
+  </div>
+  <div class="menu__person mb-3">
+    <div class="menu__person-logo-wrap"><img
+        src="https://ichef.bbci.co.uk/news/976/cpsprodpb/FD27/production/_101970846_aubreyblanche.jpg" alt="avatar"
+        class="menu__person-logo"></div>
+    <div class="menu__person-content">
+      <div class="menu__person-content-name"></div>
+      <div class="menu__person-content-icons">
+        <div class="menu__person-content-icon">1</div>
+        <div class="menu__person-content-icon">2</div>
+        <div class="menu__person-content-icon">3</div>
+        <div class="menu__person-content-icon">4</div>
+      </div>
+    </div>
+  </div>
+  <div class="menu__project mb-4">
+    <div class="menu__project-title mb-2">Задумали проект?</div>
+    <div class="menu__project-subtitle">Поделитесь деталями своего проекта, такими как объем, временные рамки или
+      бизнес-задачи, которые вы хотите решить. Наша команда внимательно их изучит, а потом вместе придумаем, что
+      делать дальше.</div>
+    <a href="#" class="menu__project-btn mt-4">Оставить сообщение</a>
+  </div>
+</div>
 <head>
-	<meta charset="utf-8">
-	<title>Example</title>
-	<meta name="description" content="...description...">
-	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+  <meta charset="utf-8">
+  <title>website</title>
+  <meta name="description" content="...description...">
+  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
   <link rel="shortcut icon" href="..." type="image/x-icon">
+  <link rel="stylesheet" href="css/bootstrap-grid.css">
 </head>
+
 <body>
+  <section class="menu">
+    <div class="container-fluid row p-4">
+      <div class="menu__inner col-sm-12 col-md-6 col-xxl-4 gx-xxl-4">
+        <div class="menu__message mb-4">
+          <div class="menu__message-title mb-2">Быстрое сообщение</div>
+          <div class="menu__message-icons">
+            <div class="menu__message-icon">1</div>
+            <div class="menu__message-icon">2</div>
+            <div class="menu__message-icon">3</div>
+            <div class="menu__message-icon">4</div>
+          </div>
+        </div>
+        <div class="menu__person mb-3">
+          <div class="menu__person-logo-wrap"><img
+              src="https://ichef.bbci.co.uk/news/976/cpsprodpb/FD27/production/_101970846_aubreyblanche.jpg"
+              alt="avatar" class="menu__person-logo"></div>
+          <div class="menu__person-content">
+            <div class="menu__person-content-name"></div>
+            <div class="menu__person-content-icons">
+              <div class="menu__person-content-icon">1</div>
+              <div class="menu__person-content-icon">2</div>
+              <div class="menu__person-content-icon">3</div>
+              <div class="menu__person-content-icon">4</div>
+            </div>
+          </div>
+        </div>
+        <div class="menu__project mb-4">
+          <div class="menu__project-title mb-2">Задумали проект?</div>
+          <div class="menu__project-subtitle">Поделитесь деталями своего проекта, такими как объем, временные рамки или
+            бизнес-задачи, которые вы хотите решить. Наша команда внимательно их изучит, а потом вместе придумаем, что
+            делать дальше.</div>
+          <a href="#" class="menu__project-btn mt-4">Оставить сообщение</a>
+        </div>
+      </div>
+      <div class="menu__inner col-sm-12 col-md-6 col-xxl-4 gx-xxl-4">
+        <div class="menu__message mb-4">
+          <div class="menu__message-title mb-2">Быстрое сообщение</div>
+          <div class="menu__message-icons">
+            <div class="menu__message-icon">1</div>
+            <div class="menu__message-icon">2</div>
+            <div class="menu__message-icon">3</div>
+            <div class="menu__message-icon">4</div>
+          </div>
+        </div>
+        <div class="menu__person mb-3">
+          <div class="menu__person-logo-wrap"><img
+              src="https://ichef.bbci.co.uk/news/976/cpsprodpb/FD27/production/_101970846_aubreyblanche.jpg"
+              alt="avatar" class="menu__person-logo"></div>
+          <div class="menu__person-content">
+            <div class="menu__person-content-name"></div>
+            <div class="menu__person-content-icons">
+              <div class="menu__person-content-icon">1</div>
+              <div class="menu__person-content-icon">2</div>
+              <div class="menu__person-content-icon">3</div>
+              <div class="menu__person-content-icon">4</div>
+            </div>
+          </div>
+        </div>
+        <div class="menu__project mb-4">
+          <div class="menu__project-title mb-2">Задумали проект?</div>
+          <div class="menu__project-subtitle">Поделитесь деталями своего проекта, такими как объем, временные рамки или
+            бизнес-задачи, которые вы хотите решить. Наша команда внимательно их изучит, а потом вместе придумаем, что
+            делать дальше.</div>
+          <a href="#" class="menu__project-btn mt-4">Оставить сообщение</a>
+        </div>
+      </div>
+      <div class="menu__inner col-sm-12 col-md-6 col-xxl-4 gx-xxl-4">
+        <div class="menu__message mb-4">
+          <div class="menu__message-title mb-2">Быстрое сообщение</div>
+          <div class="menu__message-icons">
+            <div class="menu__message-icon">1</div>
+            <div class="menu__message-icon">2</div>
+            <div class="menu__message-icon">3</div>
+            <div class="menu__message-icon">4</div>
+          </div>
+        </div>
+        <div class="menu__person mb-3">
+          <div class="menu__person-logo-wrap"><img
+              src="https://ichef.bbci.co.uk/news/976/cpsprodpb/FD27/production/_101970846_aubreyblanche.jpg"
+              alt="avatar" class="menu__person-logo"></div>
+          <div class="menu__person-content">
+            <div class="menu__person-content-name"></div>
+            <div class="menu__person-content-icons">
+              <div class="menu__person-content-icon">1</div>
+              <div class="menu__person-content-icon">2</div>
+              <div class="menu__person-content-icon">3</div>
+              <div class="menu__person-content-icon">4</div>
+            </div>
+          </div>
+        </div>
+        <div class="menu__project mb-4">
+          <div class="menu__project-title mb-2">Задумали проект?</div>
+          <div class="menu__project-subtitle">Поделитесь деталями своего проекта, такими как объем, временные рамки или
+            бизнес-задачи, которые вы хотите решить. Наша команда внимательно их изучит, а потом вместе придумаем, что
+            делать дальше.</div>
+          <a href="#" class="menu__project-btn mt-4">Оставить сообщение</a>
+        </div>
+      </div>
+      <div class="menu__inner col-sm-12 col-md-6 col-xxl-4 gx-xxl-4">
+        <div class="menu__message mb-4">
+          <div class="menu__message-title mb-2">Быстрое сообщение</div>
+          <div class="menu__message-icons">
+            <div class="menu__message-icon">1</div>
+            <div class="menu__message-icon">2</div>
+            <div class="menu__message-icon">3</div>
+            <div class="menu__message-icon">4</div>
+          </div>
+        </div>
+        <div class="menu__person mb-3">
+          <div class="menu__person-logo-wrap"><img
+              src="https://ichef.bbci.co.uk/news/976/cpsprodpb/FD27/production/_101970846_aubreyblanche.jpg"
+              alt="avatar" class="menu__person-logo"></div>
+          <div class="menu__person-content">
+            <div class="menu__person-content-name"></div>
+            <div class="menu__person-content-icons">
+              <div class="menu__person-content-icon">1</div>
+              <div class="menu__person-content-icon">2</div>
+              <div class="menu__person-content-icon">3</div>
+              <div class="menu__person-content-icon">4</div>
+            </div>
+          </div>
+        </div>
+        <div class="menu__project mb-4">
+          <div class="menu__project-title mb-2">Задумали проект?</div>
+          <div class="menu__project-subtitle">Поделитесь деталями своего проекта, такими как объем, временные рамки или
+            бизнес-задачи, которые вы хотите решить. Наша команда внимательно их изучит, а потом вместе придумаем, что
+            делать дальше.</div>
+          <a href="#" class="menu__project-btn mt-4">Оставить сообщение</a>
+        </div>
+      </div>
+      <div class="menu__inner col-sm-12 col-md-6 col-xxl-4 gx-xxl-4">
+        <div class="menu__message mb-4">
+          <div class="menu__message-title mb-2">Быстрое сообщение</div>
+          <div class="menu__message-icons">
+            <div class="menu__message-icon">1</div>
+            <div class="menu__message-icon">2</div>
+            <div class="menu__message-icon">3</div>
+            <div class="menu__message-icon">4</div>
+          </div>
+        </div>
+        <div class="menu__person mb-3">
+          <div class="menu__person-logo-wrap"><img
+              src="https://ichef.bbci.co.uk/news/976/cpsprodpb/FD27/production/_101970846_aubreyblanche.jpg"
+              alt="avatar" class="menu__person-logo"></div>
+          <div class="menu__person-content">
+            <div class="menu__person-content-name"></div>
+            <div class="menu__person-content-icons">
+              <div class="menu__person-content-icon">1</div>
+              <div class="menu__person-content-icon">2</div>
+              <div class="menu__person-content-icon">3</div>
+              <div class="menu__person-content-icon">4</div>
+            </div>
+          </div>
+        </div>
+        <div class="menu__project mb-4">
+          <div class="menu__project-title mb-2">Задумали проект?</div>
+          <div class="menu__project-subtitle">Поделитесь деталями своего проекта, такими как объем, временные рамки или
+            бизнес-задачи, которые вы хотите решить. Наша команда внимательно их изучит, а потом вместе придумаем, что
+            делать дальше.</div>
+          <a href="#" class="menu__project-btn mt-4">Оставить сообщение</a>
+        </div>
+      </div>
+    </div>
+  </section>
 
 
 
   <link rel="stylesheet" href="css/style.min.css">
+  <script src="js/main.js"></script>
   <script src="js/libs.min.js"></script>
-	<script src="js/main.js"></script>
 </body>
+
 </html>
